build.log

> library(devtools)

> library(rstudioapi)

> library(roxygen2)

> library(Rcpp)

> library(RcppEigen)

> setwd(dirname(getActiveDocumentContext()$path))

> # Compile Rcpp attributes first
> Rcpp::compileAttributes()

> # Document the package, this updates NAMESPACE and documentation
> devtools::document()
ℹ Updating QuoteDynamics documentation
ℹ Loading QuoteDynamics
Exports from C:/Users/Domen/Dropbox/GitHub/QuoteDynamics/QuoteDynamics/src/RWrapperQuoteDynamics.cpp:
   Results FastOptim(NumericVector startR, NumericMatrix XR, NumericVector tauR, NumericMatrix indR, double xtol, double stop_val, int algorithm_id, bool hessian, double step_size, bool log)

C:/Users/Domen/Dropbox/GitHub/QuoteDynamics/QuoteDynamics/src/RcppExports.cpp updated.
C:/Users/Domen/Dropbox/GitHub/QuoteDynamics/QuoteDynamics/R/RcppExports.R updated.
ℹ Re-compiling QuoteDynamics (debug build)
── R CMD INSTALL ───────────────────────────────────────────────────────────────
* installing *source* package 'QuoteDynamics' ...
** using staged installation
** libs
using C++ compiler: 'G__~1.EXE (GCC) 13.2.0'
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-44~1.1/include" -DNDEBUG -I../inst/include -I'C:/Users/Domen/AppData/Local/R/win-library/4.4/Rcpp/include' -I'C:/Users/Domen/AppData/Local/R/win-library/4.4/RcppEigen/include' -I'C:/Users/Domen/AppData/Local/R/win-library/4.4/BH/include'   -I"C:/rtools44/x86_64-w64-mingw32.static.posix/include"  -O3   -O2 -Wall -gdwarf-2 -mfpmath=sse -msse2 -mstackrealign  -UNDEBUG -Wall -pedantic -g -O0 -c DataHandle.cpp -o DataHandle.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-44~1.1/include" -DNDEBUG -I../inst/include -I'C:/Users/Domen/AppData/Local/R/win-library/4.4/Rcpp/include' -I'C:/Users/Domen/AppData/Local/R/win-library/4.4/RcppEigen/include' -I'C:/Users/Domen/AppData/Local/R/win-library/4.4/BH/include'   -I"C:/rtools44/x86_64-w64-mingw32.static.posix/include"  -O3   -O2 -Wall -gdwarf-2 -mfpmath=sse -msse2 -mstackrealign  -UNDEBUG -Wall -pedantic -g -O0 -c Filtering.cpp -o Filtering.o
Filtering.cpp: In function 'void Filtering::UVMVKalmanFilter(KFS_fit&, Eigen::MatrixXd&, Eigen::MatrixXd&, Eigen::MatrixXd&, const int&, const int&, const int&, const Eigen::MatrixXd&, Eigen::MatrixXd&, const Eigen::MatrixXd&, const Eigen::MatrixXd&, const Eigen::MatrixXd&, const Eigen::MatrixXd&, const Eigen::VectorXd&, const Eigen::VectorXi&, const Eigen::VectorXd&, const Eigen::VectorXd&, const Eigen::VectorXd&, double, double, double, const Eigen::MatrixXi&, const Eigen::VectorXd&, const int&)':
Filtering.cpp:130:43: error: assignment of read-only location '((const Eigen::DenseCoeffsBase<Eigen::Matrix<double, -1, 1>, 0>*)(& log_likelihood))->Eigen::DenseCoeffsBase<Eigen::Matrix<double, -1, 1>, 0>::operator()(((Eigen::Index)t))'
  130 |                         log_likelihood(t) = -0.5 * N * std::log(2 * M_PI) - 0.5 * log_det * log_det - 0.5 * (res_temp.transpose() * Inv * res_temp)(0, 0);
      |                         ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [C:/PROGRA~1/R/R-44~1.1/etc/x64/Makeconf:296: Filtering.o] Error 1
ERROR: compilation failed for package 'QuoteDynamics'
* removing 'C:/Users/Domen/AppData/Local/Temp/RtmpqiSt8l/devtools_install_457810f81c60/QuoteDynamics'
Error in `(function (command = NULL, args = character(), error_on_status = TRUE, …`:
! System command 'Rcmd.exe' failed
---
Exit status: 1
stdout & stderr: <printed>
---
Type .Last.error to see the more details.
